fixed overflow and scrollbar issues with code blocks

--- a/src/assets/stylesheets/footwork-docs.scss
+++ b/src/assets/stylesheets/footwork-docs.scss
@@ -143,3 +143,7 @@ img[alt="FootworkJS"] {
   height: 75px;
   max-width: 100%;
 }
+
+article {
+  max-width: 94%;
+}
